alignment fixed

--- a/physics_articles/002_particle_tracking/styles.css
+++ b/physics_articles/002_particle_tracking/styles.css
@@ -9,6 +9,7 @@ canvas {
 }
 #demo-area div {
   display: inline-block;
+  vertical-align: top;
 }
 .left {
   float: left;
